# git-trauma

./: README.md  demo.tape  generate_demo.py  pyproject.toml  test.tape
.github/workflows/: ci.yml
git_trauma/: cli.py  git_parser.py  models.py  narrator.py  signal_extractor.py
git_trauma/renderer/: terminal.py  web.py
